# openapi-converter

./: .gitignore  README.md  converter.py  pyproject.toml
tests/: convert_test.py
tests/data/: openapi.json
